--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ infosel_mt/src/tools/__pycache__
 infosel_mt/src/tasks/__pycache__
 infosel_mt/src/pretrain/__pycache__
 infosel_mt/src/lxrt/__pycache__
+README.md
